--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav id="primary-menu" aria-hidden="true">
       <ul class="menu">
         <li><a href="index.html#programs">Programs</a></li>
-        <li><a href="schedule.html">Schedule & Registration</a></li>
+        <li><a href="schedule-registration.html">Schedule & Registration</a></li>
         <li><a href="about.html">About Us</a></li>
         <li class="menu-social">
           <a href="https://www.facebook.com/restigouchedojo" target="_blank" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
