--- a/schedule-registration.html
+++ b/schedule-registration.html
@@ -52,7 +52,7 @@
   <section class="section">
     <div class="container">
       <p style="max-width:900px;margin:0 auto;color:#EEE;">
-        Questions? <a class="learn-more" href="contactus.html">Send us a message</a> and we’ll help you choose the best class.
+        Questions? <a class="learn-more" href="aboutus.html">Send us a message</a> and we’ll help you choose the best class.
       </p>
     </div>
   </section>
