--- a/schedule-registration.html
+++ b/schedule-registration.html
@@ -77,13 +77,13 @@
             <tr>
               <td data-label="Day">Saturday</td>
               <td data-label="Time">9:00–9:35 AM</td>
-              <td data-label="Class"><a class="learn-more" href="tiny-tots.html">Tiny Tots</a></td>
+              <td data-label="Class"><a class="learn-more" href="tinytots.html">Tiny Tots</a></td>
               <td data-label="Instructor">Maxime Raymond</td>
             </tr>
             <tr>
               <td data-label="Day">Saturday</td>
               <td data-label="Time">9:45–10:30 AM</td>
-              <td data-label="Class"><a class="learn-more" href="kinder-judo.html">Kinder Judo</a></td>
+              <td data-label="Class"><a class="learn-more" href="kinderjudo.html">Kinder Judo</a></td>
               <td data-label="Instructor">Megan Raymond</td>
             </tr>
 
@@ -91,13 +91,13 @@
             <tr>
               <td data-label="Day">Monday</td>
               <td data-label="Time">5:00–6:00 PM</td>
-              <td data-label="Class"><a class="learn-more" href="youth-judo.html">Youth Judo</a></td>
+              <td data-label="Class"><a class="learn-more" href="youthjudo.html">Youth Judo</a></td>
               <td data-label="Instructor">Megan Raymond</td>
             </tr>
             <tr>
               <td data-label="Day">Monday</td>
               <td data-label="Time">6:00–7:00 PM</td>
-              <td data-label="Class"><a class="learn-more" href="adult-bjj.html">Adult Gi BJJ</a></td>
+              <td data-label="Class"><a class="learn-more" href="adultbjj.html">Adult Gi BJJ</a></td>
               <td data-label="Instructor">Maxime Raymond</td>
             </tr>
 
@@ -105,13 +105,13 @@
             <tr>
               <td data-label="Day">Wednesday</td>
               <td data-label="Time">5:00–6:00 PM</td>
-              <td data-label="Class"><a class="learn-more" href="youth-judo.html">Youth Judo</a></td>
+              <td data-label="Class"><a class="learn-more" href="youthjudo.html">Youth Judo</a></td>
               <td data-label="Instructor">Megan Raymond</td>
             </tr>
             <tr>
               <td data-label="Day">Wednesday</td>
               <td data-label="Time">6:00–7:00 PM</td>
-              <td data-label="Class"><a class="learn-more" href="adult-bjj.html">Adult Gi BJJ</a></td>
+              <td data-label="Class"><a class="learn-more" href="adultbjj.html">Adult Gi BJJ</a></td>
               <td data-label="Instructor">Maxime Raymond</td>
             </tr>
 
@@ -119,14 +119,14 @@
             <tr>
               <td data-label="Day">Thursday</td>
               <td data-label="Time">5:00–6:00 PM</td>
-              <td data-label="Class"><a class="learn-more" href="youth-bjj.html">Youth No-Gi BJJ</a></td>
+              <td data-label="Class"><a class="learn-more" href="youthbjj.html">Youth No-Gi BJJ</a></td>
               <td data-label="Instructor">Mike Miller</td>
             </tr>
             <tr>
               <td data-label="Day">Thursday</td>
               <td data-label="Time">6:00–7:00 PM</td>
               <td data-label="Class">
-                <a class="learn-more" href="adult-bjj.html">Adult No-Gi BJJ</a>
+                <a class="learn-more" href="adultbjj.html">Adult No-Gi BJJ</a>
                 <span class="note">— Alternates weekly: Almost Open Mat or No-Gi Class</span>
               </td>
               <td data-label="Instructor">Maxime Raymond</td>
@@ -160,7 +160,7 @@
           <p><a href="https://www.paypal.com/ncp/payment/RHVFKDJT26MU4" target="_blank" rel="noopener" class="btn btn-primary">Register Now</a></p>
           <p class="price"><span class="badge">ON SALE</span> Annual: <strong>$355.30</strong></p>
           <p><a href="https://www.paypal.com/ncp/payment/TTLYY7MNAWHNN" target="_blank" rel="noopener" class="btn btn-secondary">Register Annual</a></p>
-          <p><a href="tiny-tots.html" class="learn-more">Program info →</a></p>
+          <p><a href="tinytots.html" class="learn-more">Program info →</a></p>
         </div>
 
         <!-- Kinder Judo -->
@@ -170,7 +170,7 @@
           <p><a href="https://www.paypal.com/ncp/payment/5498DDS7E34M4" target="_blank" rel="noopener" class="btn btn-primary">Register Now</a></p>
           <p class="price"><span class="badge">ON SALE</span> Annual: <strong>$389.30</strong></p>
           <p><a href="https://www.paypal.com/ncp/payment/GFGDDCGH4LSHC" target="_blank" rel="noopener" class="btn btn-secondary">Register Annual</a></p>
-          <p><a href="kinder-judo.html" class="learn-more">Program info →</a></p>
+          <p><a href="kinderjudo.html" class="learn-more">Program info →</a></p>
         </div>
 
         <!-- Youth Judo -->
@@ -180,7 +180,7 @@
           <p><a href="https://www.paypal.com/ncp/payment/EU2PZ9LFYGWPE" target="_blank" rel="noopener" class="btn btn-primary">Register Now</a></p>
           <p class="price"><span class="badge">ON SALE</span> Annual: <strong>$519.95</strong></p>
           <p><a href="https://www.paypal.com/ncp/payment/2WZDMEQVBZKHL" target="_blank" rel="noopener" class="btn btn-secondary">Register Annual</a></p>
-          <p><a href="youth-judo.html" class="learn-more">Program info →</a></p>
+          <p><a href="youthjudo.html" class="learn-more">Program info →</a></p>
         </div>
 
         <!-- Youth No-Gi BJJ -->
@@ -188,7 +188,7 @@
           <h3>Youth No-Gi BJJ</h3>
           <p class="price">Fall block: <strong>$206.10</strong></p>
           <p><a href="https://www.paypal.com/ncp/payment/YVVEXQ9K24C5G" target="_blank" rel="noopener" class="btn btn-primary">Register Now</a></p>
-          <p><a href="youth-bjj.html" class="learn-more">Program info →</a></p>
+          <p><a href="youthbjj.html" class="learn-more">Program info →</a></p>
         </div>
 
         <!-- Adult BJJ -->
@@ -197,7 +197,7 @@
           <p class="price">Monthly plans from <strong>$67.50</strong></p>
           <p><em>Payment options vary depending on your needs.</em></p>
           <p><a href="contactus.html" class="btn btn-secondary">Contact Us to Arrange</a></p>
-          <p><a href="adult-bjj.html" class="learn-more">Program info →</a></p>
+          <p><a href="adultbjj.html" class="learn-more">Program info →</a></p>
         </div>
 
         <!-- Judo NB/CAN Membership -->
