--- a/schedule-registration.html
+++ b/schedule-registration.html
@@ -196,7 +196,7 @@
           <h3>Adult BJJ (13+)</h3>
           <p class="price">Monthly plans from <strong>$67.50</strong></p>
           <p><em>Payment options vary depending on your needs.</em></p>
-          <p><a href="contactus.html" class="btn btn-secondary">Contact Us to Arrange</a></p>
+          <p><a href="contactus.html" class="btn btn-secondary">Contact Us</a></p>
           <p><a href="adultbjj.html" class="learn-more">Program info →</a></p>
         </div>
 
