--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="menu">
         <li><a href="index.html#programs">Programs</a></li>
         <li><a href="schedule-registration.html">Schedule & Registration</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li class="menu-social">
           <a href="https://www.facebook.com/restigouchedojo" target="_blank" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://www.instagram.com/restigouchedojo" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
