--- a/achievementsmaxime.html
+++ b/achievementsmaxime.html
@@ -189,7 +189,7 @@
       </p>
 
       <div style="margin-top:1rem;">
-        <a href="about.html" class="btn btn-secondary">Back to About</a>
+        <a href="aboutus.html" class="btn btn-secondary">Back to About us</a>
       </div>
     </div>
   </section>
