--- a/achievementsmegan.html
+++ b/achievementsmegan.html
@@ -170,7 +170,7 @@
       </div>
 
       <div style="margin-top:1rem;">
-        <a href="about.html" class="btn btn-secondary">Back to About</a>
+        <a href="aboutus.html" class="btn btn-secondary">Back to About us</a>
       </div>
     </div>
   </section>
