--- a/aboutus.html
+++ b/aboutus.html
@@ -96,7 +96,7 @@
             <i class="fa-solid fa-user-nurse team-photo-fallback" aria-hidden="true"></i>
           </div>
           <h3>Megan Raymond</h3>
-          <p class="team-role">Kinder & Youth Judo — Black Belt</p>
+          <p class="team-role">Head Coach — Judo (Black Belt)</p>
           <ul class="team-bullets">
             <li>Medalist at Canadian Championships, Junior Pan-Ams, Ontario International.</li>
             <li>OFSAA Wrestling Gold; veteran youth instructor.</li>
