--- a/youthjudo.html
+++ b/youthjudo.html
@@ -17,7 +17,7 @@
   <!-- NAVIGATION (same as index) -->
   <header class="navbar">
     <div class="container nav-container">
-      <h1 class="logo">Restigouche Dojo</h1>
+      <h1 class="logo"><a href="index.html">Restigouche Dojo</a>/h1>
 
       <!-- Mobile nav toggle (checkbox + label) -->
       <input id="nav-toggle" type="checkbox" class="nav-toggle" aria-hidden="true" />
