--- a/achievementsmegan.html
+++ b/achievementsmegan.html
@@ -64,7 +64,7 @@
   <!-- NAVBAR -->
   <header class="navbar">
     <div class="container nav-container">
-      <h1 class="logo">Restigouche Dojo</h1>
+      <h1 class="logo"><a href="index.html">Restigouche Dojo</a></h1>
 
       <!-- Mobile nav toggle (checkbox + label) -->
       <input id="nav-toggle" type="checkbox" class="nav-toggle" aria-hidden="true" />
