--- a/youthbjj.html
+++ b/youthbjj.html
@@ -69,7 +69,7 @@
       <div class="program-grid">
         <div class="program-card">
           <h3><i class="fa-solid fa-clock" aria-hidden="true"></i> Schedule</h3>
-          <p>One-hour No-Gi classes, typically Mondays 5–6 pm. Check the schedule for current times and session dates.</p>
+          <p>One-hour No-Gi classes, Thursdays 5–6 pm. Check the schedule for current times and session dates.</p>
         </div>
         <div class="program-card">
           <h3><i class="fa-solid fa-layer-group" aria-hidden="true"></i> Curriculum</h3>
