--- a/adultbjj.html
+++ b/adultbjj.html
@@ -71,16 +71,14 @@
         <div class="program-card">
           <h3><i class="fa-solid fa-user-ninja" aria-hidden="true"></i> No-Gi BJJ</h3>
           <p>
-            Fast grip transitions, body locks, front headlocks, leg-entanglement awareness, and wrestling-influenced takedowns.
-            Great for dynamic movement and MMA/real-world carryover.
+            Experience the fast-paced, athletic side of Brazilian Jiu-Jitsu without the traditional uniform. No-Gi training builds coordination, balance, and agility while improving your ability to move and react efficiently. It’s an excellent way to sharpen fitness, focus, and problem-solving in a dynamic and supportive environment.
           </p>
           <p style="margin-top:0.6rem;"><strong>Gear:</strong> rashguard, shorts/spats (no zippers).</p>
         </div>
         <div class="program-card">
           <h3><i class="fa-solid fa-user-shield" aria-hidden="true"></i> Gi BJJ</h3>
           <p>
-            Collar &amp; sleeve systems, structured guard families, lapel controls, and classic judo-influenced takedowns.
-            Excellent for technical depth and grip fighting.
+           Train in the traditional uniform that emphasizes precision, patience, and control. Gi Brazilian Jiu-Jitsu develops focus, timing, and strategic thinking while building full-body strength and resilience. It’s ideal for those who enjoy a thoughtful, methodical approach to learning and steady technical growth.
           </p>
           <p style="margin-top:0.6rem;"><strong>Gear:</strong> clean BJJ gi &amp; belt.</p>
         </div>
@@ -96,10 +94,6 @@
         <div class="program-card">
           <h3><i class="fa-solid fa-diagram-project" aria-hidden="true"></i> Fundamentals First</h3>
           <p>Base, posture, frames; guard retention &amp; passing; pins; high-percentage submissions and escapes.</p>
-        </div>
-        <div class="program-card">
-          <h3><i class="fa-solid fa-person-walking-arrow-right" aria-hidden="true"></i> Takedown Systems</h3>
-          <p>No-Gi: ties → body lock/singles/doubles. Gi: grips → kuzushi → entries (e.g., Osoto, Ouchi, Seoi variations).</p>
         </div>
         <div class="program-card">
           <h3><i class="fa-solid fa-arrows-rotate" aria-hidden="true"></i> Progressive Resistance</h3>
