--- a/dojofit.html
+++ b/dojofit.html
@@ -66,7 +66,7 @@
   <!-- IMAGE / BRAND STRIP -->
   <section class="section">
     <div class="container">
-      <img src="Photos/dojofit.png" alt="Dojo Fit training" style="max-width:100%;height:auto;border-radius:16px;box-shadow:0 8px 20px rgba(0,0,0,0.5);" />
+      <img src="" alt="Dojo Fit training" style="max-width:100%;height:auto;border-radius:16px;box-shadow:0 8px 20px rgba(0,0,0,0.5);" />
     </div>
   </section>
 
