--- a/adultbjj.html
+++ b/adultbjj.html
@@ -71,14 +71,14 @@
         <div class="program-card">
           <h3><i class="fa-solid fa-user-ninja" aria-hidden="true"></i> No-Gi BJJ</h3>
           <p>
-            Experience the fast-paced, athletic side of Brazilian Jiu-Jitsu without the traditional uniform. No-Gi training builds coordination, balance, and agility while improving your ability to move and react efficiently. It’s an excellent way to sharpen fitness, focus, and problem-solving in a dynamic and supportive environment.
+            Explore the athletic, fast-paced side of Jiu-Jitsu. No-Gi training builds agility, coordination, and focus in a supportive, high-energy environment.
           </p>
           <p style="margin-top:0.6rem;"><strong>Gear:</strong> rashguard, shorts/spats (no zippers).</p>
         </div>
         <div class="program-card">
           <h3><i class="fa-solid fa-user-shield" aria-hidden="true"></i> Gi BJJ</h3>
           <p>
-           Train in the traditional uniform that emphasizes precision, patience, and control. Gi Brazilian Jiu-Jitsu develops focus, timing, and strategic thinking while building full-body strength and resilience. It’s ideal for those who enjoy a thoughtful, methodical approach to learning and steady technical growth.
+           Train in the traditional gi to develop focus, control, and timing through a precise, technical approach to Jiu-Jitsu.
           </p>
           <p style="margin-top:0.6rem;"><strong>Gear:</strong> clean BJJ gi &amp; belt.</p>
         </div>
