--- a/dojofit.html
+++ b/dojofit.html
@@ -63,13 +63,14 @@
     </div>
   </section>
 
-  <!-- IMAGE / BRAND STRIP -->
+  <!-- IMAGE / BRAND STRIP 
   <section class="section">
     <div class="container">
       <img src="" alt="Dojo Fit training" style="max-width:100%;height:auto;border-radius:16px;box-shadow:0 8px 20px rgba(0,0,0,0.5);" />
     </div>
   </section>
-
+-->
+  
   <!-- HIGHLIGHTS -->
   <section class="section">
     <div class="container">
