--- a/playful.html
+++ b/playful.html
@@ -89,8 +89,8 @@
     <div class="container">
       <h2 class="section-title">What to Expect</h2>
       <div style="max-width:900px;margin:0 auto;color:#EEE; text-align:left;">
-        <p><strong>Format:</strong> short instructions → guided free play → simple challenges for movement confidence.</p>
-        <p><strong>Environment:</strong> safe mats, age-appropriate obstacles, supportive coaches.</p>
+        <p><strong>Format:</strong> child-led free play where imagination drives movement, exploration, and creativity.</p>
+        <p><strong>Environment:</strong> safe mats, soft equipment, and age-appropriate obstacles that invite discovery and confidence-building.</p>
         <p><strong>Wear/Bring:</strong> comfy athletic clothes (no zippers) and a water bottle.</p>
       </div>
       <div style="margin-top:1.5rem;">
