--- a/aboutus.html
+++ b/aboutus.html
@@ -148,7 +148,7 @@
   </section>
 
   <!-- CONTACT FORM -->
-  <section class="section">
+  <section id="contact" class="section">
     <div class="container">
       <h2 class="section-title">Get in Touch</h2>
       <form action="https://formsubmit.co/aabcb4b80220570ee962ecc7b80d8862" method="POST" class="contact-form">
