--- a/merch.html
+++ b/merch.html
@@ -82,7 +82,7 @@
     <div class="container">
       <h2 class="section-title">How It Works</h2>
       <p style="max-width: 900px; margin: 0 auto; color:#EEE;">
-        We offer limited runs and special drops throughout the year. Most items are <strong>pre-ordered</strong> so we can get the
+        Most items are <strong>pre-ordered</strong> so we can get the
         right sizes and styles for everyone. A small number may be in stock from time to time, but availability changes quickly.
         To place an order or ask a question, click <a class="learn-more" href="about.html#contact">Send us a message</a>.
       </p>
