--- a/merch.html
+++ b/merch.html
@@ -165,7 +165,7 @@
       </div>
 
       <p class="note" style="margin-top:1rem;">
-        Want a size or color you don’t see here? <a class="learn-more" href="about.html#contact">Send us a message</a> — we’ll let you know if it can be included in the next pre-order.
+        Want a size or color you don’t see here? <a class="learn-more" href="about.html#contact">Send us a message</a>
       </p>
     </div>
   </section>
