--- a/aboutus.html
+++ b/aboutus.html
@@ -28,6 +28,7 @@
         <ul class="menu">
           <li><a href="index.html#programs">Programs</a></li>
           <li><a href="schedule-registration.html">Schedule & Registration</a></li>
+          <li><a href="merch.html">Merch</a></li>
           <li><a href="aboutus.html">About Us</a></li>
           <li class="menu-social">
             <a href="https://www.facebook.com/restigouchedojo" target="_blank" rel="noopener" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
